external-crates/move/crates/move-compiler/tests/move_2024/parser/invalid_tyarg_locs.exp
error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:10:11
   │
 1 │ module a::m {
   │           - Module previously defined here, with 'a::m'
   ·
10 │ module a::m {
   │           ^ Duplicate definition for module 'a::m'

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:16:23
   │
16 │     fun test00(): a::m<u64>::S {
   │                       ^^^^^ Cannot use type parameters for a module

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:17:13
   │
17 │         a::m<u64>::make_s(0u64)
   │             ^^^^^ Cannot use type parameters for a module

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:20:20
   │
20 │     fun test01(): a<u64>::m::S {
   │                    ^^^^^ Cannot use type parameters for an address

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:21:10
   │
21 │         a<u64>::m::make_s(0u64)
   │          ^^^^^ Cannot use type parameters for an address

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:24:20
   │
24 │     fun test02(): a<u64>::m<u64>::S {
   │                    ^^^^^ Cannot use type parameters for an address

error[E01016]: invalid name
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:24:28
   │
24 │     fun test02(): a<u64>::m<u64>::S {
   │                    -----   ^^^^^ Paths cannot include type arguments more than once
   │                    │        
   │                    Previous type arguments appeared here
   │
   = Type arguments should only appear on module members

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:25:10
   │
25 │         a<u64>::m<u64>::make_s(0u64)
   │          ^^^^^ Cannot use type parameters for an address

error[E01016]: invalid name
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:25:18
   │
25 │         a<u64>::m<u64>::make_s(0u64)
   │          -----   ^^^^^ Paths cannot include type arguments more than once
   │          │        
   │          Previous type arguments appeared here
   │
   = Type arguments should only appear on module members

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:28:23
   │
28 │     fun test03(): a::m<u64>::S<u64> {
   │                       ^^^^^ Cannot use type parameters for a module

error[E01016]: invalid name
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:28:31
   │
28 │     fun test03(): a::m<u64>::S<u64> {
   │                       -----   ^^^^^ Paths cannot include type arguments more than once
   │                       │        
   │                       Previous type arguments appeared here
   │
   = Type arguments should only appear on module members

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:29:13
   │
29 │         a::m<u64>::make_s<u64>(0u64)
   │             ^^^^^ Cannot use type parameters for a module

error[E01016]: invalid name
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:29:26
   │
29 │         a::m<u64>::make_s<u64>(0u64)
   │             -----        ^^^^^ Paths cannot include type arguments more than once
   │             │             
   │             Previous type arguments appeared here
   │
   = Type arguments should only appear on module members

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:32:23
   │
32 │     fun test04(): a::m<u64>::S<u64> {
   │                       ^^^^^ Cannot use type parameters for a module

error[E01016]: invalid name
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:32:31
   │
32 │     fun test04(): a::m<u64>::S<u64> {
   │                       -----   ^^^^^ Paths cannot include type arguments more than once
   │                       │        
   │                       Previous type arguments appeared here
   │
   = Type arguments should only appear on module members

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:33:10
   │
33 │         a<u64>::m<u64>::make_s<u64>(0u64)
   │          ^^^^^ Cannot use type parameters for an address

error[E01016]: invalid name
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:33:18
   │
33 │         a<u64>::m<u64>::make_s<u64>(0u64)
   │          -----   ^^^^^ Paths cannot include type arguments more than once
   │          │        
   │          Previous type arguments appeared here
   │
   = Type arguments should only appear on module members

error[E01016]: invalid name
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:33:31
   │
33 │         a<u64>::m<u64>::make_s<u64>(0u64)
   │          -----                ^^^^^ Paths cannot include type arguments more than once
   │          │                     
   │          Previous type arguments appeared here
   │
   = Type arguments should only appear on module members

error[E03008]: too few type arguments
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:54:19
   │
54 │     fun test00(): 0x42::m<u64>::S {
   │                   ^^^^^^^^^^^^^^^ Invalid instantiation of '0x42::m::S'. Expected 1 type argument(s) but got 0

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:54:26
   │
54 │     fun test00(): 0x42::m<u64>::S {
   │                          ^^^^^ Cannot use type parameters for a module

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:55:16
   │
55 │         0x42::m<u64>::make_s(0u64)
   │                ^^^^^ Cannot use type parameters for a module

error[E03008]: too few type arguments
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:58:19
   │
58 │     fun test01(): 0x42<u64>::m::S {
   │                   ^^^^^^^^^^^^^^^ Invalid instantiation of '0x42::m::S'. Expected 1 type argument(s) but got 0

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:58:23
   │
58 │     fun test01(): 0x42<u64>::m::S {
   │                       ^^^^^ Cannot use type parameters for an address

error[E04003]: built-in operation not supported
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:59:9
   │
59 │         0x42<u64>::m::make_s(0u64)
   │         ^^^^^^^^
   │         │
   │         Invalid argument to '>'
   │         Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04007]: incompatible types
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:59:9
   │
58 │     fun test01(): 0x42<u64>::m::S {
   │                   --------------- Expected: '0x42::m::S<_>'
59 │         0x42<u64>::m::make_s(0u64)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │
   │         Invalid return expression
   │         Given: 'bool'

error[E03009]: unbound variable
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:59:14
   │
59 │         0x42<u64>::m::make_s(0u64)
   │              ^^^ Unbound variable 'u64'

error[E04003]: built-in operation not supported
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:59:18
   │
59 │         0x42<u64>::m::make_s(0u64)
   │         -------- ^^^^^^^^^^^^^^^^^ Invalid argument to '>'
   │         │         
   │         Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:59:20
   │
59 │         0x42<u64>::m::make_s(0u64)
   │                    ^ Could not resolve the name 'm'

error[E03008]: too few type arguments
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:62:19
   │
62 │     fun test02(): 0x42<u64>::m<u64>::S {
   │                   ^^^^^^^^^^^^^^^^^^^^ Invalid instantiation of '0x42::m::S'. Expected 1 type argument(s) but got 0

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:62:23
   │
62 │     fun test02(): 0x42<u64>::m<u64>::S {
   │                       ^^^^^ Cannot use type parameters for an address

error[E01016]: invalid name
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:62:31
   │
62 │     fun test02(): 0x42<u64>::m<u64>::S {
   │                       -----   ^^^^^ Paths cannot include type arguments more than once
   │                       │        
   │                       Previous type arguments appeared here
   │
   = Type arguments should only appear on module members

error[E04003]: built-in operation not supported
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:63:9
   │
63 │         0x42<u64>::m<u64>::make_s(0u64)
   │         ^^^^^^^^
   │         │
   │         Invalid argument to '>'
   │         Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04007]: incompatible types
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:63:9
   │
62 │     fun test02(): 0x42<u64>::m<u64>::S {
   │                   -------------------- Expected: '0x42::m::S<_>'
63 │         0x42<u64>::m<u64>::make_s(0u64)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │
   │         Invalid return expression
   │         Given: 'bool'

error[E03009]: unbound variable
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:63:14
   │
63 │         0x42<u64>::m<u64>::make_s(0u64)
   │              ^^^ Unbound variable 'u64'

error[E04003]: built-in operation not supported
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:63:18
   │
63 │         0x42<u64>::m<u64>::make_s(0u64)
   │         -------- ^^^^^^^^^^^^^^^^^^^^^^ Invalid argument to '>'
   │         │         
   │         Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:63:20
   │
63 │         0x42<u64>::m<u64>::make_s(0u64)
   │                    ^ Could not resolve the name 'm'

error[E03008]: too few type arguments
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:66:19
   │
66 │     fun test03(): 0x42::m<u64>::S<u64> {
   │                   ^^^^^^^^^^^^^^^^^^^^ Invalid instantiation of '0x42::m::S'. Expected 1 type argument(s) but got 0

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:66:26
   │
66 │     fun test03(): 0x42::m<u64>::S<u64> {
   │                          ^^^^^ Cannot use type parameters for a module

error[E01016]: invalid name
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:66:34
   │
66 │     fun test03(): 0x42::m<u64>::S<u64> {
   │                          -----   ^^^^^ Paths cannot include type arguments more than once
   │                          │        
   │                          Previous type arguments appeared here
   │
   = Type arguments should only appear on module members

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:67:16
   │
67 │         0x42::m<u64>::make_s<u64>(0u64)
   │                ^^^^^ Cannot use type parameters for a module

error[E01016]: invalid name
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:67:29
   │
67 │         0x42::m<u64>::make_s<u64>(0u64)
   │                -----        ^^^^^ Paths cannot include type arguments more than once
   │                │             
   │                Previous type arguments appeared here
   │
   = Type arguments should only appear on module members

error[E03008]: too few type arguments
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:70:19
   │
70 │     fun test04(): 0x42::m<u64>::S<u64> {
   │                   ^^^^^^^^^^^^^^^^^^^^ Invalid instantiation of '0x42::m::S'. Expected 1 type argument(s) but got 0

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:70:26
   │
70 │     fun test04(): 0x42::m<u64>::S<u64> {
   │                          ^^^^^ Cannot use type parameters for a module

error[E01016]: invalid name
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:70:34
   │
70 │     fun test04(): 0x42::m<u64>::S<u64> {
   │                          -----   ^^^^^ Paths cannot include type arguments more than once
   │                          │        
   │                          Previous type arguments appeared here
   │
   = Type arguments should only appear on module members

error[E04003]: built-in operation not supported
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:71:9
   │
71 │         0x42<u64>::m<u64>::make_s<u64>(0u64)
   │         ^^^^^^^^
   │         │
   │         Invalid argument to '>'
   │         Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04007]: incompatible types
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:71:9
   │
70 │     fun test04(): 0x42::m<u64>::S<u64> {
   │                   -------------------- Expected: '0x42::m::S<_>'
71 │         0x42<u64>::m<u64>::make_s<u64>(0u64)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │
   │         Invalid return expression
   │         Given: 'bool'

error[E03009]: unbound variable
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:71:14
   │
71 │         0x42<u64>::m<u64>::make_s<u64>(0u64)
   │              ^^^ Unbound variable 'u64'

error[E04003]: built-in operation not supported
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:71:18
   │
71 │         0x42<u64>::m<u64>::make_s<u64>(0u64)
   │         -------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid argument to '>'
   │         │         
   │         Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:71:20
   │
71 │         0x42<u64>::m<u64>::make_s<u64>(0u64)
   │                    ^ Could not resolve the name 'm'

error[E01016]: invalid name
   ┌─ tests/move_2024/parser/invalid_tyarg_locs.move:71:34
   │
71 │         0x42<u64>::m<u64>::make_s<u64>(0u64)
   │                     -----        ^^^^^ Paths cannot include type arguments more than once
   │                     │             
   │                     Previous type arguments appeared here
   │
   = Type arguments should only appear on module members

